# nosql2h24-indie

./: .gitignore  README.md  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/contexts/: TagsContext.js  UserContext.js
frontend/src/pages/announcementprofile/: AnnouncmentProfile.js
frontend/src/requests/: Requests.js
gighunt/: Dockerfile  docker-compose.yml
hello_world/gighunt/: Dockerfile  docker-compose.yml  pyproject.toml
hello_world/gighunt/gighunt/: app.py
prototype/: docker-compose.yml
prototype/frontend/: Dockerfile  package-lock.json  package.json
prototype/frontend/public/: index.html
prototype/frontend/src/: index.css  index.js
prototype/gighunt/: Dockerfile  docker-compose.yml  pyproject.toml
prototype/gighunt/gighunt/: app.py
prototype/gighunt/gighunt/modules/clients/: arangodb_client.py
prototype/gighunt/gighunt/routers/: user_router.py
prototype/gighunt/src/gighunt/: app.py  main.py
prototype/gighunt/src/gighunt/modules/: application.py  controller.py  models.py  settings.py
prototype/gighunt/src/gighunt/modules/clients/: arangodb_client.py
prototype/gighunt/src/gighunt/modules/use_cases/: announcement_use_cases.py  base_edge_use_cases.py  base_vertex_use_case.py  base_vertex_use_cases.py  comment_use_cases.py  group_use_cases.py  place_use_cases.py  producer_announcement_use_cases.py  stars_use_cases.py  user_group_use_cases.py  user_use_cases.py
prototype/gighunt/src/gighunt/routers/: announcement_router.py  group_router.py  place_router.py  user_router.py
(+70 files in other folders)
